--- a/styles/main.css
+++ b/styles/main.css
@@ -410,16 +410,39 @@ template {
 }
 
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 300;
-  src: local("Roboto Regular"), local("Roboto-Regular"), url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto-Regular.ttf") format("ttf");
+  font-family: "Cera Pro";
+  font-style: medium;
+  font-weight: 500;
+  src: local("Cera Pro"), local("Cera Pro Medium"), url("/src/fonts/Cera Pro Medium.ttf") format("ttf");
 }
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: Roboto;
+  font-family: "Cera Pro", sans-serif;
+  font-size: 14px;
+}
+
+.header {
+  margin-bottom: 0px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1248px;
+  padding: 0 15px;
+}
+
+.section {
+  margin-bottom: 40px;
+}
+.section--no-margin {
+  margin-bottom: 0;
+}
+
+.lock {
+  overflow: hidden;
+  padding: 0 9px;
 }
 
 a {
@@ -500,4 +523,139 @@ label > input {
   height: 20px;
   margin: 0;
   border: 2px solid black;
+}
+
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  background-color: aquamarine;
+}
+
+.header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #5e5373;
+  z-index: 2;
+}
+
+.header__container {
+  margin: 0 auto;
+  border-bottom: 1px solid #000;
+}
+
+.menu {
+  display: flex;
+}
+
+.burger-btn {
+  z-index: 3;
+}
+
+.nav {
+  position: absolute;
+  top: 60px;
+  opacity: 0;
+  -webkit-transform: translateY(-200px);
+          transform: translateY(-200px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.5s;
+  height: 500vw;
+  background-color: aqua;
+}
+
+.nav__active {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  flex-direction: column;
+  opacity: 1;
+}
+
+.nav__logo {
+  z-index: 3;
+}
+
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+
+.nav__list-social {
+  z-index: 3;
+}
+
+.nav__item {
+  padding: 0 5px;
+}
+
+@media (min-width: 560px) {
+  body {
+    font-size: 16px;
+  }
+  .header {
+    margin-bottom: 0px;
+  }
+  .container {
+    padding: 0 40px;
+  }
+  .section {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+  .header {
+    margin-bottom: 0px;
+  }
+  .container {
+    padding: 0 60px;
+  }
+  .section {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    font-size: 20px;
+  }
+  .header {
+    margin-bottom: 0px;
+  }
+  .container {
+    padding: 0 70px;
+  }
+  .section {
+    margin-bottom: 0;
+  }
+  .burger-btn {
+    display: none;
+  }
+}
+
+@media (min-width: 1248px) {
+  body {
+    font-size: 24px;
+  }
+  .header {
+    margin-bottom: 0px;
+  }
+  .container {
+    padding: 0 130px;
+  }
+  .section {
+    margin-bottom: 0;
+  }
 }
