--- a/styles/main.css
+++ b/styles/main.css
@@ -417,6 +417,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   color: #ffffff;
+  background-color: #333333;
 }
 
 ul {
@@ -549,7 +550,7 @@ label > input {
   background-color: transparent;
   cursor: pointer;
   z-index: 4;
-  transition: ease 2.3s;
+  transition: ease 1.8s;
 }
 .burger-btn::before, .burger-btn::after,
 .burger-btn span {
@@ -607,14 +608,15 @@ label > input {
 .nav {
   z-index: 3;
   position: absolute;
+  top: 0px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
-  padding-top: 170px;
+  padding-top: 60px;
   transition: ease 1.5s;
-  -webkit-transform: translateX(-200px);
-          transform: translateX(-200px);
+  -webkit-transform: translateX(-300px);
+          transform: translateX(-300px);
 }
 
 .nav__active {
@@ -656,29 +658,111 @@ label > input {
           animation: menu-off 0.3s linear both;
 }
 .nav__close .nav__item:nth-child(1) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+.nav__close .nav__item:nth-child(2) {
+  -webkit-animation-delay: 0.35s;
+          animation-delay: 0.35s;
+}
+.nav__close .nav__item:nth-child(3) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+.nav__close .nav__item:nth-child(4) {
   -webkit-animation-delay: 0.25s;
           animation-delay: 0.25s;
 }
-.nav__close .nav__item:nth-child(2) {
+.nav__close .nav__item .nav__list-social:nth-child(1) {
   -webkit-animation-delay: 0.2s;
           animation-delay: 0.2s;
 }
-.nav__close .nav__item:nth-child(3) {
+.nav__close .nav__item .nav__list-social:nth-child(2) {
   -webkit-animation-delay: 0.15s;
           animation-delay: 0.15s;
 }
-.nav__close .nav__item:nth-child(4) {
+.nav__close .nav__item .nav__list-social:nth-child(3) {
   -webkit-animation-delay: 0.1s;
           animation-delay: 0.1s;
+}
+.nav__close .nav__item .nav__list-social:nth-child(4) {
+  -webkit-animation-delay: 0.05s;
+          animation-delay: 0.05s;
+}
+
+.nav__item-social {
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+.nav__active .nav__item-social {
+  -webkit-animation: menu-on 0.3s linear both;
+          animation: menu-on 0.3s linear both;
+}
+.nav__active .nav__item-social:nth-child(1) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+.nav__active .nav__item-social:nth-child(2) {
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+.nav__active .nav__item-social:nth-child(3) {
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+.nav__active .nav__item-social:nth-child(4) {
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+.nav__close .nav__item-social {
+  -webkit-animation: menu-off 0.3s linear both;
+          animation: menu-off 0.3s linear both;
+}
+.nav__close .nav__item-social:nth-child(1) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+.nav__close .nav__item-social:nth-child(2) {
+  -webkit-animation-delay: 0.15s;
+          animation-delay: 0.15s;
+}
+.nav__close .nav__item-social:nth-child(3) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+.nav__close .nav__item-social:nth-child(4) {
+  -webkit-animation-delay: 0.05s;
+          animation-delay: 0.05s;
 }
 
 .nav__list {
   display: flex;
   flex-direction: column;
+  width: 170px;
+  font-weight: 700;
   list-style: none;
-  margin-top: 80px;
-  padding: 0 30px 30px 40px;
+  padding: 0 0 30px 40px;
   text-transform: uppercase;
+}
+.nav__list li {
+  margin-bottom: 20px;
+  letter-spacing: 0.05em;
+  line-height: 20px;
+}
+
+.nav__list-social {
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.nav__list-social li {
+  width: 50%;
+}
+.nav__list-social li:first-child, .nav__list-social li:nth-child(2) {
+  width: 100%;
+  text-transform: lowercase;
+}
+.nav__list-social img {
+  height: 30px;
 }
 
 .menu {
@@ -703,7 +787,7 @@ label > input {
 
 .menu__logo {
   font-size: 16px;
-  width: 110px;
+  width: 30vw;
   margin: 0;
 }
 
@@ -743,6 +827,11 @@ label > input {
   100% {
     opacity: 0;
   }
+}
+.header__content-subtitle {
+  align-items: center;
+  font-weight: 500;
+  font-size: 22px;
 }
 @media (min-width: 560px) {
   body {
