--- a/styles/main.css
+++ b/styles/main.css
@@ -476,6 +476,20 @@ form {
   flex-direction: column;
 }
 
+.button {
+  display: block;
+  height: 40px;
+  margin: 0 auto;
+  border: none;
+  border-radius: 5px;
+  background-color: #D1A954;
+  cursor: pointer;
+  transition: width 1s cubic-bezier(0, 0, 1, 1) 1s;
+}
+.button:hover {
+  width: 230px;
+}
+
 .calc__sheet,
 .calc__profile-pipe {
   display: none;
@@ -533,7 +547,7 @@ label > input {
   background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.85), rgba(51, 51, 51, 0.85)), url("../img/lazer.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  height: 600px;
+  height: 490px;
 }
 
 .header__container {
@@ -550,7 +564,7 @@ label > input {
   background-color: transparent;
   cursor: pointer;
   z-index: 4;
-  transition: ease 1.8s;
+  transition: ease 1.5s;
 }
 .burger-btn::before, .burger-btn::after,
 .burger-btn span {
@@ -582,7 +596,7 @@ label > input {
 }
 
 .burger-btn-active {
-  transition: ease 1.5s;
+  transition: ease 1s;
   width: 30px;
   height: 20px;
   -webkit-transform: translateX(130px);
@@ -770,6 +784,7 @@ label > input {
   justify-content: space-between;
   align-items: center;
   margin-top: 5px;
+  margin-bottom: 50px;
 }
 
 .menu__title {
@@ -828,11 +843,39 @@ label > input {
     opacity: 0;
   }
 }
+.header__content-title {
+  position: relative;
+  margin-bottom: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  line-height: 130%;
+}
+.header__content-title::after {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 50%;
+  height: 3px;
+  background-color: #ffffff;
+  opacity: 0.4;
+  border-radius: 50%;
+}
+
 .header__content-subtitle {
-  align-items: center;
   font-weight: 500;
   font-size: 22px;
 }
+
+.header__content-text {
+  text-align: center;
+  line-height: 120%;
+  margin-bottom: 50px;
+}
+
 @media (min-width: 560px) {
   body {
     font-size: 16px;
@@ -876,6 +919,7 @@ label > input {
     margin-left: 17px;
   }
 }
+
 @media (min-width: 768px) {
   body {
     font-size: 16px;
@@ -893,6 +937,7 @@ label > input {
     right: 43vw;
   }
 }
+
 @media (min-width: 1024px) {
   body {
     font-size: 20px;
@@ -916,6 +961,7 @@ label > input {
     background-color: aqua;
   }
 }
+
 @media (min-width: 1248px) {
   body {
     font-size: 24px;
