--- a/styles/main.css
+++ b/styles/main.css
@@ -780,11 +780,15 @@ label > input {
   width: 100%;
   text-transform: lowercase;
 }
+.nav__list-social li:nth-child(5) {
+  display: none;
+}
 .nav__list-social img {
   height: 30px;
 }
 
 .menu {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -848,6 +852,7 @@ label > input {
     opacity: 0;
   }
 }
+
 .header__content-title {
   position: relative;
   margin: 0 auto;
@@ -992,7 +997,6 @@ label > input {
   .nav__active {
     -webkit-transform: translateX(-40px);
             transform: translateX(-40px);
-    padding-bottom: 92px;
   }
   .nav__list {
     padding: 0 0 30px 20px;
@@ -1016,6 +1020,50 @@ label > input {
   .section {
     margin-bottom: 0;
   }
+  .button {
+    margin: 0;
+    margin-top: 60px;
+  }
+  .header__container {
+    padding-bottom: 100px;
+  }
+  .nav {
+    width: 280px;
+    justify-content: flex-start;
+    -webkit-transform: translateX(-400px);
+            transform: translateX(-400px);
+    height: 560px;
+  }
+  .nav__active {
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
+  }
+  .menu__logo {
+    width: 200px;
+  }
+  .header__content-title::after {
+    left: 0;
+    bottom: -40px;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  .header__content-title {
+    font-size: 40px;
+    margin: 0;
+    margin-bottom: 80px;
+    text-align: start;
+  }
+  .header__content-subtitle {
+    display: block;
+    width: 500px;
+    margin-top: 20px;
+    line-height: 130%;
+  }
+  .header__content-text {
+    text-align: start;
+    width: 410px;
+    margin: 0;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1031,14 +1079,75 @@ label > input {
   .section {
     margin-bottom: 0;
   }
+  .button {
+    margin-left: 100px;
+  }
   .burger-btn {
     display: none;
   }
   .nav {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    width: 100%;
+    height: auto;
+    padding-top: 0;
+  }
+  .nav__active {
     opacity: 1;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    background-color: aqua;
+  }
+  .nav__active .nav__item {
+    opacity: 1;
+  }
+  .nav__close .nav__item {
+    opacity: 1;
+  }
+  .nav__list {
+    justify-content: space-between;
+    margin-left: 100px;
+  }
+  .nav__list li {
+    margin: 0;
+    justify-content: space-between;
+  }
+  .nav__list {
+    flex-direction: row;
+    width: 100%;
+    padding: 0;
+  }
+  .nav__list-social {
+    position: absolute;
+    top: 0;
+    left: 0px;
+    width: 10%;
+    height: 100%;
+    margin: 0;
+    flex-direction: column;
+    background-color: #333333;
+    -webkit-writing-mode: vertical-lr;
+            writing-mode: vertical-lr;
+  }
+  .nav__list-social li:first-child, .nav__list-social li:nth-child(2) {
+    display: none;
+  }
+  .nav__list-social li:nth-child(5) {
+    display: block;
+  }
+  .menu {
+    margin-top: 50px;
+  }
+  .menu__title {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+  }
+  .header__content {
+    margin-left: 100px;
+    margin-top: 140px;
   }
 }
 
