--- a/styles/main.css
+++ b/styles/main.css
@@ -479,8 +479,7 @@ form {
 .button {
   position: relative;
   display: block;
-  padding: 20px 40px;
-  margin: 0 auto;
+  padding: 15px 40px;
   border: none;
   text-transform: uppercase;
   background-color: #D1A954;
@@ -602,7 +601,7 @@ label > input {
 }
 
 .burger-btn-active {
-  transition: ease 1.5s;
+  transition: ease 1.7s;
   width: 30px;
   height: 20px;
   -webkit-transform: translateX(130px);
@@ -797,7 +796,7 @@ label > input {
   justify-content: space-between;
   align-items: center;
   margin-top: 5px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .menu__title {
@@ -856,16 +855,26 @@ label > input {
     opacity: 0;
   }
 }
+.header__content {
+  background-color: rgba(67, 79, 79, 0.537);
+  padding: 0 20px;
+  margin-bottom: 30px;
+}
+
+.header__inner {
+  padding: 40px 30px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+}
 
 .header__content-title {
   position: relative;
   margin: 0 auto;
   margin-bottom: 40px;
-  width: 300px;
   text-align: center;
-  text-transform: uppercase;
   letter-spacing: 0.05em;
   line-height: 130%;
+  font-size: 24px;
 }
 .header__content-title::after {
   content: "";
@@ -888,9 +897,8 @@ label > input {
 
 .header__content-text {
   text-align: center;
-  line-height: 120%;
-  margin: 0 30px;
-  margin-bottom: 50px;
+  line-height: 1.6em;
+  letter-spacing: 0.1em;
 }
 
 .link-hover {
@@ -944,6 +952,26 @@ label > input {
 .link-social:hover {
   transition: 0.3s;
   opacity: 0.5;
+}
+
+.header-form {
+  margin: 0 auto;
+  align-items: center;
+}
+.header-form input {
+  max-width: 500px;
+  height: 40px;
+  outline: 0px;
+  padding: 0 10px;
+  border: 0;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.header-form__title {
+  margin-top: 0;
+  text-align: center;
+  font-size: 24px;
 }
 
 @media (min-width: 560px) {
