--- a/styles/main.css
+++ b/styles/main.css
@@ -493,7 +493,6 @@ form {
 .button:active {
   background-color: #6e4b4b;
 }
-
 .calc__sheet,
 .calc__profile-pipe {
   display: none;
@@ -604,8 +603,8 @@ label > input {
   transition: ease 1.7s;
   width: 30px;
   height: 20px;
-  -webkit-transform: translateX(130px);
-          transform: translateX(130px);
+  -webkit-transform: translateX(160px);
+          transform: translateX(160px);
 }
 .burger-btn-active span {
   opacity: 0;
@@ -626,9 +625,10 @@ label > input {
 .nav {
   z-index: 3;
   position: absolute;
+  height: 100vh;
   top: 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
   padding-top: 60px;
@@ -641,6 +641,7 @@ label > input {
   -webkit-transform: translateX(-30px);
           transform: translateX(-30px);
   background-color: #333333;
+  height: 100vh;
 }
 
 .nav__close {
@@ -759,7 +760,7 @@ label > input {
   width: 170px;
   font-weight: 700;
   list-style: none;
-  padding: 0 0 30px 40px;
+  padding: 0 10px 30px 60px;
   text-transform: uppercase;
 }
 .nav__list li {
@@ -795,7 +796,6 @@ label > input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5px;
   margin-bottom: 30px;
 }
 
@@ -855,12 +855,12 @@ label > input {
     opacity: 0;
   }
 }
+
 .header__content {
   background-color: rgba(67, 79, 79, 0.537);
   padding: 0 20px;
   margin-bottom: 30px;
 }
-
 .header__inner {
   padding: 40px 30px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -954,11 +954,11 @@ label > input {
   opacity: 0.5;
 }
 
-.header-form {
+.header__form {
   margin: 0 auto;
   align-items: center;
 }
-.header-form input {
+.header__form input {
   max-width: 500px;
   height: 40px;
   outline: 0px;
@@ -968,7 +968,7 @@ label > input {
   margin-bottom: 20px;
 }
 
-.header-form__title {
+.header__form-title {
   margin-top: 0;
   text-align: center;
   font-size: 24px;
@@ -1037,6 +1037,9 @@ label > input {
   .menu__logo {
     width: 150px;
   }
+  .header__form input {
+    max-width: 600px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1047,14 +1050,14 @@ label > input {
     margin-bottom: 0px;
   }
   .container {
-    padding: 0 60px;
+    padding: 0 30px;
   }
   .section {
     margin-bottom: 0;
   }
   .button {
     margin: 0;
-    margin-top: 60px;
+    margin-top: 20px;
   }
   .header__container {
     padding-bottom: 100px;
@@ -1070,8 +1073,26 @@ label > input {
     -webkit-transform: translateX(-60px);
             transform: translateX(-60px);
   }
+  .nav__list {
+    justify-content: space-between;
+    padding-left: 40px;
+  }
   .menu__logo {
     width: 200px;
+  }
+  .header__content--container {
+    display: flex;
+    justify-content: space-between;
+    min-height: 360px;
+  }
+  .header__content {
+    width: 50%;
+    margin-bottom: 0;
+    margin-right: 10px;
+  }
+  .header__inner {
+    padding: 40px 20px;
+    height: auto;
   }
   .header__content-title::after {
     left: 0;
@@ -1080,7 +1101,7 @@ label > input {
             transform: translate(0);
   }
   .header__content-title {
-    font-size: 40px;
+    font-size: 30px;
     margin: 0;
     margin-bottom: 80px;
     text-align: start;
@@ -1093,8 +1114,14 @@ label > input {
   }
   .header__content-text {
     text-align: start;
-    width: 410px;
     margin: 0;
+  }
+  .header__form {
+    width: 35%;
+    margin: 0;
+  }
+  .header__form {
+    width: 40%;
   }
 }
 
@@ -1111,11 +1138,9 @@ label > input {
   .section {
     margin-bottom: 0;
   }
-  .button {
-    margin-left: 120px;
-  }
   .header__container {
     padding-bottom: 70px;
+    padding-left: 170px;
   }
   .burger-btn {
     display: none;
@@ -1123,7 +1148,6 @@ label > input {
   .nav {
     position: relative;
     display: flex;
-    margin-left: 20px;
     flex-direction: row;
     -webkit-transform: translateX(0);
             transform: translateX(0);
@@ -1142,7 +1166,6 @@ label > input {
   }
   .nav__list {
     justify-content: space-between;
-    margin-left: 100px;
   }
   .nav__list li {
     margin: 0;
@@ -1161,10 +1184,10 @@ label > input {
   }
   .nav__list-social {
     position: absolute;
-    top: -50px;
+    top: 0;
     left: 0;
     width: auto;
-    padding: 50px 50px 0 70px;
+    padding: 0 50px 0 70px;
     height: 740px;
     margin: 0;
     align-items: center;
@@ -1215,6 +1238,7 @@ label > input {
   }
   .menu {
     margin-top: 50px;
+    margin-bottom: 140px;
   }
   .menu__title {
     position: absolute;
@@ -1222,10 +1246,6 @@ label > input {
     left: 50%;
     -webkit-transform: translate(-50%);
             transform: translate(-50%);
-  }
-  .header__content {
-    margin-left: 120px;
-    margin-top: 140px;
   }
   .header__content-title {
     width: auto;
