--- a/styles/main.css
+++ b/styles/main.css
@@ -861,6 +861,7 @@ label > input {
   padding: 0 20px;
   margin-bottom: 30px;
 }
+
 .header__inner {
   padding: 40px 30px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -1266,9 +1267,17 @@ label > input {
     margin-bottom: 0;
   }
   .header__container {
-    padding-bottom: 100px;
+    padding-left: 165px;
+    height: 800px;
   }
   .nav__list-social {
-    height: 800px;
+    height: 850px;
+    justify-content: center;
+  }
+  .header__content {
+    margin-right: 30px;
+  }
+  .header__inner {
+    padding: 40px 30px;
   }
 }
