--- a/styles/main.css
+++ b/styles/main.css
@@ -519,6 +519,7 @@ label > input {
 }
 
 .header {
+  position: relative;
   background-image: linear-gradient(0deg, rgba(51, 51, 51, 0.85), rgba(51, 51, 51, 0.85)), url("../img/lazer.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -943,7 +944,6 @@ label > input {
 
 .header__form-title {
   margin-top: 0;
-  text-align: center;
   font-size: 24px;
 }
 
@@ -1096,6 +1096,9 @@ label > input {
   .header__form {
     width: 40%;
   }
+  .header__form-title {
+    font-size: 30px;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1110,6 +1113,9 @@ label > input {
   }
   .section {
     margin-bottom: 0;
+  }
+  .header {
+    height: 700px;
   }
   .header__container {
     padding-bottom: 70px;
@@ -1160,12 +1166,12 @@ label > input {
     top: 0;
     left: 0;
     width: auto;
-    padding: 0 50px 0 70px;
-    height: 740px;
+    height: 100%;
+    padding: 35px 50px 0 70px;
     margin: 0;
     align-items: center;
     flex-direction: row-reverse;
-    justify-content: end;
+    justify-content: center;
     background: rgba(51, 51, 51, 0.75);
     -webkit-writing-mode: vertical-lr;
             writing-mode: vertical-lr;
@@ -1251,5 +1257,8 @@ label > input {
   }
   .header__inner {
     padding: 40px 30px;
+  }
+  .header__form input {
+    height: 50px;
   }
 }
